[package]
name = "reduk"
version = "0.0.0"
authors = ["kryo4096 <kryo4096@gmail.com>"]

[dependencies]
rlibc = "*"
volatile = "*"
spin = "*"
os_bootinfo = "*"
x86_64 = "0.2.0-alpha"
bitflags = "1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-reduk.json"
